# simple-quizzer

./: .buildinfo  .gitignore  doc.html  external_links.html  genindex.html  github.html  index.html  main.py  objects.inv  pyproject.toml  releases.html  search.html  searchindex.js  setup.py  test.py
.github/workflows/: deploy.yml
_sources/: releases.md
docs/: _config.yml  _toc.yml  conf.py  doc.md  external_links.md  index.md  releases.md
docs/_build/.doctrees/: environment.pickle  github.doctree  index.doctree
docs/_build/html/: .buildinfo  genindex.html  github.html  index.html  search.html  searchindex.js
docs/_build/html/_sources/: github.md
flashquiz/: __init__.py  args.py  default.csv  quizzer.py
flashquiz/flashcards/: __init__.py  card.py  deck.py
flashquiz/gui/: __init__.py  constants.py  gui.py
flashquiz/parse/: __init__.py  csv.py
