[project]
name = "simple-quizzer"
version = "0.0.1"
authors = [
  { name="Michael MH", email="mikemh@uri.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mike-fmh/simple-quizzer"