[project]
name = "flashquiz"
version = "0.0.1"
authors = [
  { name="Michael MH", email="mikemh@uri.edu" },
]
description = "Quiz yourself on your flashcards"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mike-fmh/flashquiz"